# beancount-docker

./: .env.example  Dockerfile  README.md  docker-compose.yaml  package.json  pyproject.toml  tsconfig.json
books/: dashboards.tsx
